# SF-bench

./: .cursorignore  .cursorindexingignore  .env.sample  .gitignore  .pre-commit-config.yaml  Agents.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI_TEST_RESULTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  sfdx-project.json
.cursor/: hooks.json  mcp-recommended.md
.cursor/commands/: evaluate.md  fix-lints.md  preflight.md  review.md  test.md  update-memory.md  verify.md
.cursor/hooks/: format_python.py  session_complete.py  verify_work.py
.cursor/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
.cursor/rules/: code_documentation.mdc  core.mdc  documentation_standards.mdc  memory-bank.mdc  public-repo-safety.mdc  quality-gates.mdc  savant-mode.mdc  technical_writing.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  submit-results.md
.github/workflows/: pages.yml
data/tasks/: dev.json  full.json  hard.json  lite.json  realistic.json  single-lwc.json  verified.json
data/templates/: project-scratch-def.json
docs/: 404.html  BENCHMARK.md  CUSTOM_DOMAIN_SETUP.md  LEADERBOARD.md  PREFLIGHT_CHECKS.md  REALISTIC_VALIDATION.md  VALIDATION_METHODOLOGY.md  _config.yml  faq.md  index.md  quickstart.md  robots.txt
docs/_layouts/: default.html
docs/blog/: ai-model-performance-results.md  how-to-evaluate-ai-models-salesforce.md  sf-bench-vs-swe-bench.md  why-salesforce-needs-coding-benchmark.md
scripts/: check_links.py  check_links.sh  evaluate.py  leaderboard.py  monitor_evaluations.sh  orchestrator.py  pre_commit_checks.sh  run_gemini_eval.py  run_parallel_eval.py  test_atomic.py  test_gemini.py  test_harness.py  test_with_ai.py  verify_repo.sh
sfbench/: __init__.py  config.py  engine.py  main.py
tests/: test_audit_logging.py  test_checkpoint.py  test_config.py  test_connection_pooling.py  test_patch_validation.py  test_retry.py  test_schema_verification.py
(+57 files in other folders)
