[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfbench"
version = "0.1.0"
description = "Benchmark for evaluating AI coding agents on Salesforce development tasks"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SF-Bench Contributors"}
]
keywords = [
    "salesforce",
    "benchmark",
    "ai",
    "evaluation",
    "apex",
    "lwc",
    "coding-agents"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
all = [
    "sfbench[dev,openai,anthropic]",
]

[project.urls]
Homepage = "https://github.com/sfbench/sf-bench"
Documentation = "https://sfbench.github.io/sf-bench"
Repository = "https://github.com/sfbench/sf-bench"
Issues = "https://github.com/sfbench/sf-bench/issues"

[project.scripts]
sfbench = "sfbench.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sfbench*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

